# sample_schema_two_crates

./: Cargo.toml
src/: lib.rs
